--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   fl_chart: ^0.9.2
   shared_preferences: ^0.5.7
   logger: ^0.9.1
+  bottom_navy_bar: ^5.4.0
+  fluttericon: ^1.0.7
+  shake: ^0.1.0
   flutter_localizations:
     sdk: flutter
 
