--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   fluttericon: ^1.0.7
   shake: ^0.1.0
   expandable: ^4.1.4
+  visibility_detector: ^0.1.5
   flutter_localizations:
     sdk: flutter
 
