--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  firebase_auth: ^0.16.0
+  google_sign_in: ^4.5.1
   flutter_launcher_icons: ^0.7.4
   flutter_fluid_slider: ^1.0.2
   provider: ^4.0.5
-  backdrop: ^0.2.12
-  fl_chart: ^0.9.2
+  backdrop: ^0.2.12 #unused
+  fl_chart: ^0.9.2 #unused
   shared_preferences: ^0.5.7
   logger: ^0.9.1
   bottom_navy_bar: ^5.4.0
@@ -35,6 +37,7 @@ dependencies:
   shake: ^0.1.0
   expandable: ^4.1.4
   visibility_detector: ^0.1.5
+  animated_text_kit: ^2.1.0
   flutter_localizations:
     sdk: flutter
 
