--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^4.0.5
   backdrop: ^0.2.12 #unused
   fl_chart: ^0.9.2 #unused
+  progress_state_button: ^1.0.1
   shared_preferences: ^0.5.7
   logger: ^0.9.1
   bottom_navy_bar: ^5.4.0
@@ -61,8 +62,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - i18n/en.json
-  - i18n/es.json
+   - assets/images/google_logo.png
+   - i18n/en.json
+   - i18n/es.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
