--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-#  firebase_auth: ^0.16.0
-  firebase_auth: 0.15.2
+  firebase_auth: ^0.16.0
+  firebase_core: ^0.4.5
+  firebase_analytics: ^5.0.14
+  cloud_firestore: ^0.13.6
   google_sign_in: ^4.5.1
   flutter_launcher_icons: ^0.7.4
   flutter_fluid_slider: ^1.0.2
